--- a/src/templates/views/about.hbs
+++ b/src/templates/views/about.hbs
@@ -7,7 +7,8 @@
 
     <body>
         {{>header}}
-        <img class="portrait" src="/img/node_img.jpg"> 
+        <p>This Application was created by G Sakthi Ganesh. This application uses data from mapbox and Darknetsky!!</p>
+            <img class="portrait" src="/img/node_img.jpg"> 
          {{>footer}}
     </body>
 </html>
